welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:2: error: ')' expected but ';' found.
while (!getX()==14; !getY()==8;) {
                  ^Runner:2: error: illegal start of statement
while (!getX()==14; !getY()==8;) {
                               ^